# backend/UBBGradePortal.Application/DTOs/Activity/PaginatedProfessorSolvedActivityDto.cs
@@ -2,5 +2,5 @@
 
 public record PaginatedProfessorSolvedActivityDto(
     int Count,
-    List<SolvedActivityDetailsDto> SolvedActivities
+    List<SolvedActivityProfessorDetailsDto> SolvedActivities
 );
